fix: Dropdown Mobile header position & spacing

--- a/src/Dropdown/Dropdown_mobile.scss
+++ b/src/Dropdown/Dropdown_mobile.scss
@@ -2,6 +2,7 @@
   .dropdown-container {
     width: 100%;
     height: 100%;
+    z-index: 1005;
 
     ul {
       width: 100%;
@@ -11,12 +12,14 @@
       top: 0px;
       left: 0px;
       padding: 0px;
+      max-height: 100%;
 
       .mobile-title {
         background-color: $pe-color-white-gray;
         padding-top: 24px;
         padding-bottom: 24px;
         text-align: center;
+        margin-bottom: 12px;
 
         h1 {
           span {
@@ -33,12 +36,33 @@
         line-height: 20px;
 
         button {
-          padding: 24px;
+          padding: 12px 0px 12px 24px;
+
+          &.checkmark {
+            padding: 12px 24px 12px 24px;
+          }
         }
 
         a {
-          padding: 24px 50px;
+          padding: 12px 0px 12px 24px;
+
+          &.checkmark {
+            padding: 12px 24px 12px 50px;
+          }
         }
+      }
+    }
+
+    .divider-container {
+      cursor: default;
+      &:hover {
+        background-color: transparent;
+      }
+
+      .dropdown-divider {
+        padding: 0px 24px 0px 24px;
+        margin-bottom: 12px;
+        margin-top: 12px;
       }
     }
   }
